samples/_failures_safe/1761658085_a7578a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8575344.c: In function ‘main’:
./samples/SAFE/__tmp_e8575344.c:142:9: error: expected declaration or statement at end of input
  142 |         buffer_free(&input_buf);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_e8575344.c:142:9: error: expected declaration or statement at end of input
